Fixed the alignment of description in center in mobile view

--- a/nanoheal-test/src/components/repocard.scss
+++ b/nanoheal-test/src/components/repocard.scss
@@ -121,6 +121,10 @@
       .repo-username {
         font-size: 0.7rem;
       }
+      .repo-description {
+        
+        text-align: center;
+      }
     }
   }
 }
